@@ -20,6 +20,12 @@ STATUSTHEME #002030;#000000;#ffffff;#999999;#777755;#339933;#aa6644;#ffffff;#ddd
 # windowtheme colours are :
 #    focused window border and unfocused window border
 WINDOWTHEME #443311;#002030;
+# Background colour for the focused window's name in the bar from STATUSTHEME
+WNAMEBG 7
+# left align the focused window's name in the bar
+LEFT_WINDOWNAME 0
+# max length for the window's name
+WINDOWNAMELENGTH 35
 #
 BORDERWIDTH 2
 # percentage of the desktop for the main window
@@ -37,23 +43,25 @@ ATTACHASIDE 1
 TOPSTACK 1
 # if in stacking mode center window # (1) is best for gimp
 CENTER_STACK 0
+# Key to use when moving/resizing windows in stacking mode.
+# Default is Alt; other choice is Super, so only uncomment if
+# you want to use the Super key
+#RESIZEMOVEKEY Super
 # Select monitor the bar will be on, not needed with one monitor
-# BAR_MONITOR 1
+#BAR_MONITOR 1
 # Change from stacking mode to new mode when reaching this many
 # open windows - Off by default
 #AUTO_NUM_OPEN 4
 #AUTO_MODE 3
 # For semi transparent unfocused windows if using a compositor e.g. compton
+# 100 is opaque
 UF_WIN_ALPHA 65
+# For semi transparent bar if using a compositor e.g. compton
+# 100 is opaque
+BAR_ALPHA 75
 # only one of FOLLOWMOUSE and CLICKTOFOCUS should be zero, but none have to be
 FOLLOWMOUSE 1
 CLICKTOFOCUS 0
-# Background colour for the focused window's name in the bar from STATUSTHEME
-WNAMEBG 7
-# left align the focused window's name in the bar
-LEFT_WINDOWNAME 0
-# max length for the window's name
-WINDOWNAMELENGTH 35
 TOPBAR 0
 SHOW_BAR 0
 # Show the number of opened windows in the desktop switcher?
